// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`draw a cross 1`] = `
Array [
  Point {
    "b": 0,
    "g": 0,
    "r": 0,
    "x": -19661,
    "y": -19661,
  },
  Point {
    "b": 0,
    "g": 65535,
    "r": 0,
    "x": -13107,
    "y": -19661,
  },
  Point {
    "b": 0,
    "g": 65535,
    "r": 0,
    "x": -13107,
    "y": -13107,
  },
  Point {
    "b": 0,
    "g": 65535,
    "r": 0,
    "x": -6554,
    "y": -13107,
  },
  Point {
    "b": 0,
    "g": 65535,
    "r": 0,
    "x": -6554,
    "y": -6554,
  },
  Point {
    "b": 0,
    "g": 65535,
    "r": 0,
    "x": -13107,
    "y": -6554,
  },
  Point {
    "b": 0,
    "g": 65535,
    "r": 0,
    "x": -13107,
    "y": 0,
  },
  Point {
    "b": 0,
    "g": 65535,
    "r": 0,
    "x": -19661,
    "y": 0,
  },
  Point {
    "b": 0,
    "g": 65535,
    "r": 0,
    "x": -19661,
    "y": -6554,
  },
  Point {
    "b": 0,
    "g": 65535,
    "r": 0,
    "x": -26214,
    "y": -6554,
  },
  Point {
    "b": 0,
    "g": 65535,
    "r": 0,
    "x": -26214,
    "y": -13107,
  },
  Point {
    "b": 0,
    "g": 65535,
    "r": 0,
    "x": -19661,
    "y": -13107,
  },
  Point {
    "b": 0,
    "g": 65535,
    "r": 0,
    "x": -19661,
    "y": -19661,
  },
]
`;

exports[`draw a triangle 1`] = `
Array [
  Point {
    "b": 0,
    "g": 0,
    "r": 0,
    "x": 11140,
    "y": -32768,
  },
  Point {
    "b": 0,
    "g": 65535,
    "r": 0,
    "x": 32767,
    "y": 24903,
  },
  Point {
    "b": 0,
    "g": 65535,
    "r": 0,
    "x": 32767,
    "y": 24903,
  },
  Point {
    "b": 0,
    "g": 65535,
    "r": 0,
    "x": 11140,
    "y": -32768,
  },
]
`;
